# bob_nostr

./: .env.signer.template  .env.template  .gitignore  ARCHITECTURE.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.txt
.github/workflows/: docker.yml  ros2_ci.yml
bob_nostr/: __init__.py  nostr_client_node.py  repl_node.py  setup.cfg
bob_nostr/task_scheduler/: __init__.py  config.py  scheduler.py  storage.py  tools.py
bob_nostr/task_scheduler/resources/: tasks_default.json
bob_nostr/task_scheduler/scripts/: __init__.py  run_scheduler.py
config/: _bashrc  nginx.conf.template
docker/: Dockerfile.base  Dockerfile.signer  compose-base.yaml  compose-nostr.yaml  compose-redis.yaml  compose-signer.yaml  compose-worker.yaml  compose-zenoh.yaml
launch/: base_launch.yaml
prompts/: agent.md
skills/: TEMPLATE_SPEC.md
skills/agent_contacts/: SKILL.md
skills/agent_contacts/scripts/: agent_contacts_cli.py  agent_contacts_db.py  nostr_publisher.py
skills/chronology/: SKILL.md
skills/chronology/examples/: demo_usage.py
skills/chronology/scripts/: chronology_cli.py  chronology_engine.py
skills/core_coder/: SKILL.md
skills/core_coder/scripts/: coder_tool.py
skills/journal/: SKILL.md
skills/journal/resources/: journal_template.md
skills/journal/scripts/: journal_retention.py  journal_writer.py
skills/nostr_memory/: SKILL.md
skills/nostr_memory/examples/: example_usage.py
skills/nostr_memory/resources/: memory_spec.yaml
skills/nostr_memory/scripts/: __init__.py  api.py  cli_agent_memory.py  codec.py  compress.py  nostr_memory_tool.py  nostr_relay_manager.py  nostr_signer_service.py  registry.py  signer.py
skills/relay_discovery/: SKILL.md
skills/relay_discovery/resources/: default_relays.yaml
skills/repl_kernel/: .gitignore  SKILL.md
skills/service_announcement/: SKILL.md
skills/task_scheduler/: SKILL.md
skills/web_researcher/: SKILL.md
tests/: test_nip17_flow.py  test_repo.py
(+11 files in other folders)
